Sometging become better, have changed includes

--- a/uvision works read from ADC0/.vscode/settings.json
+++ b/uvision works read from ADC0/.vscode/settings.json
@@ -9,6 +9,7 @@
         "mdr32f9qx_rst_clk.h": "c",
         "defines_for_proj.h": "c",
         "sysclk_for_proj.h": "c",
-        "dma_for_proj.h": "c"
+        "dma_for_proj.h": "c",
+        "mdr32f9qx_dac.h": "c"
     }
 }
